structmeta-tests/tests/compile_fail/struct_meta/option_hash_map.stderr
error[E0277]: the trait bound `HashMap<String, LitInt>: Parse` is not satisfied
 --> $DIR/option_hash_map.rs:6:5
  |
6 |     rest: Option<HashMap<String, LitInt>>,
  |     ^^^^ the trait `Parse` is not implemented for `HashMap<String, LitInt>`
